--- a/4.md
+++ b/4.md
@@ -1,28 +1,13 @@
-+ Ahri Hecarim Lilia Milio 
-+ Ahri Hecarim Poppy Zoe 
-+ Akali Fiora Nasus Neeko 
-+ Akali Fiora Poppy Shen 
-+ Akali Katarina Lilia Shen 
-+ Akali Katarina Tristana Varus 
-+ Bard Fiora Gwen Morgana 
-+ Bard Fiora Gwen Zoe 
-+ Bard Gwen Katarina Milio 
-+ Bard Gwen Katarina Rakan 
-+ Bard Gwen Milio Rakan 
-+ Bard Gwen Morgana Zoe 
-+ Bard Jinx Milio Rakan 
-+ Bard Jinx Morgana Zoe 
-+ Bard Milio Rakan Soraka 
-+ Bard Morgana Soraka Zoe 
-+ Cassiopeia Karma Morgana Zilean 
-+ Fiora Katarina Lilia Poppy 
-+ Fiora Katarina Milio Zoe 
-+ Fiora Katarina Morgana Rakan 
-+ Jayce Neeko Ryze Zoe 
-+ Lilia Milio Poppy Zoe 
-+ Lilia Morgana Poppy Rakan 
-+ Lilia Shen Tristana Varus 
-+ Milio Morgana Rakan Zoe 
-+ Nasus Neeko Poppy Shen 
-+ Nasus Shyvana Smolder Varus 
-+ Poppy Ryze Taric Zoe 
++ **Ahri Hecarim Poppy Zoe **
++ **Akali Fiora Nasus Neeko **
++ **Akali Fiora Poppy Shen **
++ **Bard Fiora Gwen Morgana **
++ **Bard Fiora Gwen Zoe **
++ **Bard Gwen Morgana Zoe **
++ **Bard Jinx Morgana Zoe **
++ **Bard Morgana Soraka Zoe **
++ **Cassiopeia Karma Morgana Zilean **
++ **Jayce Neeko Ryze Zoe **
++ **Nasus Neeko Poppy Shen **
++ **Nasus Shyvana Smolder Varus **
++ **Poppy Ryze Taric Zoe**
