--- a/7.md
+++ b/7.md
@@ -1,427 +1,162 @@
-+ Ahri Akali Ashe Bard Gwen Hecarim Shen 
-+ Ahri Akali Ashe Fiora Hecarim Shen Zoe 
-+ Ahri Akali Ashe Hecarim Katarina Milio Shen 
-+ Ahri Akali Bard Camille Gwen Hecarim Shen 
-+ Ahri Akali Bard Camille Gwen Hecarim Zilean 
-+ Ahri Akali Bard Camille Hecarim Shen Zilean 
-+ Ahri Akali Bard Fiora Hecarim Morgana Shen 
-+ Ahri Akali Bard Gwen Hecarim Jax Shen 
-+ Ahri Akali Bard Gwen Hecarim Jax Zilean 
-+ Ahri Akali Bard Gwen Hecarim Kalista Lilia 
-+ Ahri Akali Bard Gwen Hecarim Kalista Rakan 
-+ Ahri Akali Bard Gwen Hecarim Kalista Shen 
-+ Ahri Akali Bard Gwen Hecarim Kassadin Shen 
-+ Ahri Akali Bard Gwen Hecarim Lilia Rakan 
-+ Ahri Akali Bard Gwen Hecarim Morgana Poppy 
-+ Ahri Akali Bard Gwen Hecarim Morgana Shen 
-+ Ahri Akali Bard Gwen Hecarim Rakan Shen 
-+ Ahri Akali Bard Gwen Hecarim Shen Zilean 
-+ Ahri Akali Bard Gwen Lilia Rakan Shen 
-+ Ahri Akali Bard Gwen Morgana Nasus Neeko 
-+ Ahri Akali Bard Gwen Morgana Poppy Shen 
-+ Ahri Akali Bard Gwen Rakan Tristana Varus 
-+ Ahri Akali Bard Gwen Rumble Tahm Kench Varus 
-+ Ahri Akali Bard Hecarim Jax Shen Zilean 
-+ Ahri Akali Bard Hecarim Kalista Katarina Shen 
-+ Ahri Akali Bard Hecarim Kalista Rakan Shen 
-+ Ahri Akali Bard Hecarim Katarina Rakan Shen 
-+ Ahri Akali Camille Fiora Hecarim Shen Zoe 
-+ Ahri Akali Camille Hecarim Katarina Milio Shen 
-+ Ahri Akali Fiora Hecarim Jax Shen Zoe 
-+ Ahri Akali Fiora Hecarim Kalista Lilia Zoe 
-+ Ahri Akali Fiora Hecarim Kalista Milio Poppy 
-+ Ahri Akali Fiora Hecarim Kalista Milio Shen 
-+ Ahri Akali Fiora Hecarim Kalista Shen Zoe 
-+ Ahri Akali Fiora Hecarim Kassadin Shen Zoe 
-+ Ahri Akali Fiora Hecarim Kassadin Taric Zoe 
-+ Ahri Akali Fiora Rumble Tahm Kench Varus Zoe 
-+ Ahri Akali Gwen Hecarim Kalista Milio Shen 
-+ Ahri Akali Hecarim Jax Katarina Milio Shen 
-+ Ahri Akali Hecarim Kalista Katarina Milio Shen 
-+ Ahri Akali Hecarim Kalista Katarina Poppy Zoe 
-+ Ahri Akali Hecarim Kalista Katarina Ryze Shen 
-+ Ahri Akali Hecarim Kalista Katarina Shen Zoe 
-+ Ahri Akali Hecarim Kalista Milio Nilah Shen 
-+ Ahri Akali Hecarim Kassadin Katarina Milio Shen 
-+ Ahri Akali Katarina Milio Rumble Tahm Kench Varus 
-+ Ahri Bard Blitz Fiora Gwen Morgana Tahm Kench 
-+ Ahri Bard Blitz Gwen Katarina Rakan Tahm Kench 
-+ Ahri Bard Camille Hecarim Jax Lilia Rakan 
-+ Ahri Bard Camille Hecarim Jax Morgana Poppy 
-+ Ahri Bard Camille Hecarim Kalista Lilia Zilean 
-+ Ahri Bard Cassiopeia Fiora Gwen Karma Zilean 
-+ Ahri Bard Cassiopeia Hecarim Karma Poppy Zilean 
-+ Ahri Bard Diana Fiora Gwen Hecarim Morgana 
-+ Ahri Bard Diana Gwen Hecarim Katarina Rakan 
-+ Ahri Bard Diana Hecarim Jinx Olaf Zilean 
-+ Ahri Bard Diana Hecarim Jinx Twitch Zilean 
-+ Ahri Bard Fiora Galio Gwen Morgana Tahm Kench 
-+ Ahri Bard Fiora Gwen Hecarim Lilia Morgana 
-+ Ahri Bard Fiora Gwen Hecarim Lilia Rakan 
-+ Ahri Bard Fiora Gwen Hecarim Morgana Nunu 
-+ Ahri Bard Fiora Gwen Hecarim Morgana Poppy 
-+ Ahri Bard Fiora Gwen Hecarim Morgana Shen 
-+ Ahri Bard Fiora Gwen Hecarim Morgana Taric 
-+ Ahri Bard Fiora Gwen Hecarim Poppy Rakan 
-+ Ahri Bard Fiora Gwen Hecarim Poppy Zilean 
-+ Ahri Bard Fiora Gwen Lilia Poppy Rakan 
-+ Ahri Bard Fiora Gwen Mordekaiser Morgana Tahm Kench 
-+ Ahri Bard Fiora Gwen Morgana Rumble Tahm Kench 
-+ Ahri Bard Fiora Gwen Morgana Tahm Kench Warwick 
-+ Ahri Bard Fiora Hecarim Katarina Lilia Morgana 
-+ Ahri Bard Fiora Hecarim Katarina Poppy Rakan 
-+ Ahri Bard Galio Gwen Katarina Rakan Tahm Kench 
-+ Ahri Bard Galio Rakan Seraphine Soraka Tahm Kench 
-+ Ahri Bard Galio Soraka Tahm Kench Vex Zilean 
-+ Ahri Bard Gwen Hecarim Katarina Lilia Morgana 
-+ Ahri Bard Gwen Hecarim Katarina Lilia Rakan 
-+ Ahri Bard Gwen Hecarim Katarina Lilia Zilean 
-+ Ahri Bard Gwen Hecarim Katarina Morgana Poppy 
-+ Ahri Bard Gwen Hecarim Katarina Nunu Rakan 
-+ Ahri Bard Gwen Hecarim Katarina Poppy Rakan 
-+ Ahri Bard Gwen Hecarim Katarina Rakan Shen 
-+ Ahri Bard Gwen Hecarim Katarina Rakan Taric 
-+ Ahri Bard Gwen Hecarim Lilia Nilah Rakan 
-+ Ahri Bard Gwen Hecarim Morgana Nilah Poppy 
-+ Ahri Bard Gwen Katarina Lilia Morgana Poppy 
-+ Ahri Bard Gwen Katarina Mordekaiser Rakan Tahm Kench 
-+ Ahri Bard Gwen Katarina Rakan Rumble Tahm Kench 
-+ Ahri Bard Gwen Katarina Rakan Tahm Kench Warwick 
-+ Ahri Bard Gwen Katarina Rumble Tahm Kench Tristana 
-+ Ahri Bard Gwen Rakan Rumble Tahm Kench Tristana 
-+ Ahri Bard Hecarim Jax Kalista Lilia Zilean 
-+ Ahri Bard Hecarim Jinx KogMaw Lilia Rakan 
-+ Ahri Bard Hecarim Jinx KogMaw Morgana Poppy 
-+ Ahri Bard Hecarim Jinx Lilia Nomsy Rakan 
-+ Ahri Bard Hecarim Jinx Lilia Olaf Rakan 
-+ Ahri Bard Hecarim Jinx Lilia Rakan Twitch 
-+ Ahri Bard Hecarim Jinx Morgana Nomsy Poppy 
-+ Ahri Bard Hecarim Jinx Morgana Olaf Poppy 
-+ Ahri Bard Hecarim Jinx Morgana Poppy Twitch 
-+ Ahri Bard Hecarim Morgana Nasus Neeko Shen 
-+ Ahri Bard Hecarim Rakan Shen Tristana Varus 
-+ Ahri Bard Jinx Morgana Neeko Nomsy Shyvana 
-+ Ahri Bard Jinx Nomsy Rakan Smolder Tristana 
-+ Ahri Bard Jinx Nomsy Rumble Smolder Tahm Kench 
-+ Ahri Bard Jinx Olaf Tahm Kench Warwick Zilean 
-+ Ahri Bard Jinx Rakan Rumble Tahm Kench Tristana 
-+ Ahri Bard Jinx Tahm Kench Twitch Warwick Zilean 
-+ Ahri Bard Rakan Rumble Soraka Tahm Kench Tristana 
-+ Ahri Ezreal Galio Hecarim Poppy Rumble Zoe 
-+ Ahri Ezreal Jayce Neeko Rumble Tahm Kench Zoe 
-+ Ahri Ezreal Poppy Rumble Tahm Kench Taric Zoe 
-+ Ahri Fiora Katarina Rumble Tahm Kench Tristana Zoe 
-+ Ahri Lilia Milio Rumble Shen Tahm Kench Varus 
-+ Ahri Lilia Poppy Rumble Tahm Kench Tristana Zoe 
-+ Ahri Morgana Rakan Rumble Tahm Kench Tristana Zoe 
-+ Ahri Nasus Neeko Rumble Tahm Kench Varus Zoe 
-+ Ahri Neeko Rumble Shyvana Smolder Tahm Kench Zoe 
-+ Ahri Poppy Rumble Shen Tahm Kench Varus Zoe 
-+ Akali Ashe Hecarim Mordekaiser Nilah Shen Tahm Kench 
-+ Akali Bard Briar Gwen Milio Nasus Rakan 
-+ Akali Bard Briar Gwen Morgana Nasus Zoe 
-+ Akali Bard Camille Gwen Hecarim Shen Zilean 
-+ Akali Bard Camille Gwen Jax Milio Rakan 
-+ Akali Bard Camille Gwen Jax Morgana Zoe 
-+ Akali Bard Camille Gwen Kalista Milio Zilean 
-+ Akali Bard Cassiopeia Gwen Karma Zilean Zoe 
-+ Akali Bard Diana Gwen Milio Rakan Shen 
-+ Akali Bard Diana Gwen Morgana Shen Zoe 
-+ Akali Bard Elise Gwen Milio Nasus Rakan 
-+ Akali Bard Elise Gwen Morgana Nasus Zoe 
-+ Akali Bard Ezreal Gwen Milio Rakan Varus 
-+ Akali Bard Ezreal Gwen Morgana Varus Zoe 
-+ Akali Bard Fiora Lilia Milio Morgana Shen 
-+ Akali Bard Fiora Lilia Rakan Shen Zoe 
-+ Akali Bard Fiora Milio Morgana Tristana Varus 
-+ Akali Bard Fiora Milio Nasus Neeko Rakan 
-+ Akali Bard Fiora Milio Poppy Rakan Shen 
-+ Akali Bard Fiora Rakan Tristana Varus Zoe 
-+ Akali Bard Gwen Hecarim Jax Shen Zilean 
-+ Akali Bard Gwen Hecarim Kalista Milio Shen 
-+ Akali Bard Gwen Hecarim Kalista Rakan Shen 
-+ Akali Bard Gwen Hecarim Milio Rakan Shen 
-+ Akali Bard Gwen Hecarim Morgana Shen Zoe 
-+ Akali Bard Gwen Hwei Milio Rakan Varus 
-+ Akali Bard Gwen Hwei Morgana Varus Zoe 
-+ Akali Bard Gwen Jax Kalista Milio Zilean 
-+ Akali Bard Gwen Jayce Milio Nasus Rakan 
-+ Akali Bard Gwen Jayce Morgana Nasus Zoe 
-+ Akali Bard Gwen Lilia Milio Morgana Poppy 
-+ Akali Bard Gwen Lilia Milio Morgana Shen 
-+ Akali Bard Gwen Lilia Milio Rakan Shen 
-+ Akali Bard Gwen Lilia Milio Shen Zilean 
-+ Akali Bard Gwen Lilia Morgana Shen Zoe 
-+ Akali Bard Gwen Lilia Poppy Rakan Zoe 
-+ Akali Bard Gwen Lilia Rakan Ryze Shen 
-+ Akali Bard Gwen Lilia Rakan Shen Zoe 
-+ Akali Bard Gwen Milio Morgana Nasus Neeko 
-+ Akali Bard Gwen Milio Morgana Poppy Shen 
-+ Akali Bard Gwen Milio Morgana Tristana Varus 
-+ Akali Bard Gwen Milio Nasus Neeko Rakan 
-+ Akali Bard Gwen Milio Nasus Rakan Shyvana 
-+ Akali Bard Gwen Milio Nasus Rakan Swain 
-+ Akali Bard Gwen Milio Nunu Rakan Shen 
-+ Akali Bard Gwen Milio Poppy Rakan Shen 
-+ Akali Bard Gwen Milio Rakan Rumble Varus 
-+ Akali Bard Gwen Milio Rakan Shen Taric 
-+ Akali Bard Gwen Milio Rakan Smolder Varus 
-+ Akali Bard Gwen Milio Rakan Tristana Varus 
-+ Akali Bard Gwen Milio Tristana Varus Zilean 
-+ Akali Bard Gwen Morgana Nasus Neeko Ryze 
-+ Akali Bard Gwen Morgana Nasus Neeko Zoe 
-+ Akali Bard Gwen Morgana Nasus Shyvana Zoe 
-+ Akali Bard Gwen Morgana Nasus Swain Zoe 
-+ Akali Bard Gwen Morgana Nunu Shen Zoe 
-+ Akali Bard Gwen Morgana Poppy Ryze Shen 
-+ Akali Bard Gwen Morgana Poppy Shen Zoe 
-+ Akali Bard Gwen Morgana Rumble Varus Zoe 
-+ Akali Bard Gwen Morgana Shen Taric Zoe 
-+ Akali Bard Gwen Morgana Smolder Varus Zoe 
-+ Akali Bard Gwen Morgana Tristana Varus Zoe 
-+ Akali Bard Gwen Nasus Neeko Rakan Zoe 
-+ Akali Bard Gwen Nasus Neeko Zilean Zoe 
-+ Akali Bard Gwen Poppy Rakan Shen Zoe 
-+ Akali Bard Gwen Poppy Shen Zilean Zoe 
-+ Akali Bard Gwen Rakan Ryze Tristana Varus 
-+ Akali Bard Gwen Rakan Tristana Varus Zoe 
-+ Akali Bard Katarina Lilia Morgana Shen Zoe 
-+ Akali Bard Katarina Milio Morgana Nasus Neeko 
-+ Akali Bard Katarina Milio Morgana Poppy Shen 
-+ Akali Bard Katarina Morgana Tristana Varus Zoe 
-+ Akali Bard Katarina Nasus Neeko Rakan Zoe 
-+ Akali Bard Katarina Poppy Rakan Shen Zoe 
-+ Akali Blitz Hecarim Kalista Katarina Shen Tahm Kench 
-+ Akali Camille Cassiopeia Fiora Hecarim Karma Shen 
-+ Akali Camille Fiora Hecarim Morgana Shen Zilean 
-+ Akali Camille Hecarim Katarina Rakan Shen Zilean 
-+ Akali Cassiopeia Fiora Hecarim Jax Karma Shen 
-+ Akali Fiora Galio Rumble Ryze Varus Zoe 
-+ Akali Fiora Hecarim Jax Morgana Shen Zilean 
-+ Akali Fiora Hecarim Kalista Lilia Nasus Neeko 
-+ Akali Fiora Hecarim Kalista Milio Shen Zoe 
-+ Akali Fiora Hecarim Kalista Morgana Rakan Shen 
-+ Akali Fiora Hecarim Kalista Poppy Tristana Varus 
-+ Akali Fiora Hecarim Kassadin Ryze Shen Zoe 
-+ Akali Fiora Hecarim Poppy Rumble Tahm Kench Varus 
-+ Akali Galio Hecarim Kalista Katarina Shen Tahm Kench 
-+ Akali Hecarim Jax Katarina Rakan Shen Zilean 
-+ Akali Hecarim Kalista Katarina Mordekaiser Shen Tahm Kench 
-+ Akali Hecarim Kalista Katarina Nasus Neeko Poppy 
-+ Akali Hecarim Kalista Katarina Rumble Shen Tahm Kench 
-+ Akali Hecarim Kalista Katarina Rumble Tahm Kench Varus 
-+ Akali Hecarim Kalista Katarina Shen Tahm Kench Warwick 
-+ Akali Hecarim Kalista Lilia Rumble Tahm Kench Varus 
-+ Akali Hecarim Kalista Rumble Shen Tahm Kench Tristana 
-+ Akali Hecarim Katarina Lilia Rumble Tahm Kench Varus 
-+ Akali Hecarim Katarina Rumble Shen Tahm Kench Tristana 
-+ Bard Blitz Galio Morgana Nora & Yuumi Soraka Zoe 
-+ Bard Briar Elise Gwen Milio Nilah Rakan 
-+ Bard Briar Elise Gwen Morgana Nilah Zoe 
-+ Bard Briar Fiora Gwen Milio Neeko Rakan 
-+ Bard Briar Gwen Katarina Milio Morgana Neeko 
-+ Bard Briar Gwen Katarina Neeko Rakan Zoe 
-+ Bard Briar Jinx Milio Nomsy Rakan Shyvana 
-+ Bard Briar Jinx Morgana Nomsy Shyvana Zoe 
-+ Bard Cassiopeia Fiora Gwen Karma Milio Rakan 
-+ Bard Cassiopeia Fiora Gwen Karma Milio Zilean 
-+ Bard Cassiopeia Fiora Gwen Karma Ryze Zilean 
-+ Bard Cassiopeia Fiora Gwen Karma Zilean Zoe 
-+ Bard Cassiopeia Fiora Gwen Milio Rakan Syndra 
-+ Bard Cassiopeia Fiora Gwen Milio Rakan Ziggs 
-+ Bard Cassiopeia Fiora Karma Katarina Milio Zilean 
-+ Bard Cassiopeia Gwen Karma Katarina Milio Morgana 
-+ Bard Cassiopeia Gwen Karma Katarina Milio Zilean 
-+ Bard Cassiopeia Gwen Karma Katarina Rakan Zoe 
-+ Bard Cassiopeia Gwen Karma Katarina Zilean Zoe 
-+ Bard Cassiopeia Gwen Karma Nilah Zilean Zoe 
-+ Bard Cassiopeia Gwen Katarina Milio Morgana Syndra 
-+ Bard Cassiopeia Gwen Katarina Milio Morgana Ziggs 
-+ Bard Cassiopeia Gwen Katarina Rakan Syndra Zoe 
-+ Bard Cassiopeia Gwen Katarina Rakan Ziggs Zoe 
-+ Bard Cassiopeia Jinx Karma KogMaw Zilean Zoe 
-+ Bard Cassiopeia Jinx Karma Nomsy Zilean Zoe 
-+ Bard Cassiopeia Jinx Karma Olaf Zilean Zoe 
-+ Bard Cassiopeia Jinx Karma Twitch Zilean Zoe 
-+ Bard Cassiopeia Karma Lilia Milio Poppy Zilean 
-+ Bard Cassiopeia Karma Olaf Twitch Zilean Zoe 
-+ Bard Diana Fiora Gwen Lilia Milio Morgana 
-+ Bard Diana Fiora Gwen Lilia Rakan Zoe 
-+ Bard Diana Fiora Gwen Milio Poppy Rakan 
-+ Bard Diana Gwen Katarina Lilia Morgana Zoe 
-+ Bard Diana Gwen Katarina Milio Morgana Poppy 
-+ Bard Diana Gwen Katarina Poppy Rakan Zoe 
-+ Bard Diana Jinx Lilia Milio Olaf Zilean 
-+ Bard Diana Jinx Lilia Milio Twitch Zilean 
-+ Bard Diana Jinx Olaf Poppy Zilean Zoe 
-+ Bard Diana Jinx Poppy Twitch Zilean Zoe 
-+ Bard Elise Fiora Gwen Milio Neeko Rakan 
-+ Bard Elise Gwen Katarina Milio Morgana Neeko 
-+ Bard Elise Gwen Katarina Neeko Rakan Zoe 
-+ Bard Elise Jinx Milio Nomsy Rakan Shyvana 
-+ Bard Elise Jinx Morgana Nomsy Shyvana Zoe 
-+ Bard Ezreal Fiora Galio Gwen Rumble Zoe 
-+ Bard Ezreal Fiora Gwen Milio Morgana Tristana 
-+ Bard Ezreal Fiora Gwen Rakan Tristana Zoe 
-+ Bard Ezreal Galio Gwen Morgana Rumble Zoe 
-+ Bard Ezreal Galio Jinx Morgana Rumble Zoe 
-+ Bard Ezreal Galio Morgana Rumble Soraka Zoe 
-+ Bard Ezreal Gwen Katarina Morgana Tristana Zoe 
-+ Bard Ezreal Jayce Morgana Nasus Varus Zoe 
-+ Bard Ezreal Jayce Morgana Shyvana Smolder Zoe 
-+ Bard Ezreal Jayce Neeko Rakan Tristana Zoe 
-+ Bard Ezreal Jinx Milio Nomsy Rakan Smolder 
-+ Bard Ezreal Jinx Morgana Nomsy Smolder Zoe 
-+ Bard Ezreal Lilia Morgana Taric Tristana Zoe 
-+ Bard Ezreal Morgana Shen Taric Varus Zoe 
-+ Bard Ezreal Poppy Rakan Taric Tristana Zoe 
-+ Bard Fiora Gwen Hecarim Lilia Milio Morgana 
-+ Bard Fiora Gwen Hecarim Lilia Rakan Zoe 
-+ Bard Fiora Gwen Hecarim Milio Poppy Rakan 
-+ Bard Fiora Gwen Hwei Milio Morgana Tristana 
-+ Bard Fiora Gwen Hwei Rakan Tristana Zoe 
-+ Bard Fiora Gwen Jayce Milio Neeko Rakan 
-+ Bard Fiora Gwen Karma Syndra Zilean Zoe 
-+ Bard Fiora Gwen Karma Ziggs Zilean Zoe 
-+ Bard Fiora Gwen Lilia Milio Morgana Nunu 
-+ Bard Fiora Gwen Lilia Milio Morgana Poppy 
-+ Bard Fiora Gwen Lilia Milio Morgana Shen 
-+ Bard Fiora Gwen Lilia Milio Morgana Taric 
-+ Bard Fiora Gwen Lilia Milio Poppy Rakan 
-+ Bard Fiora Gwen Lilia Milio Poppy Zilean 
-+ Bard Fiora Gwen Lilia Nunu Rakan Zoe 
-+ Bard Fiora Gwen Lilia Poppy Rakan Ryze 
-+ Bard Fiora Gwen Lilia Poppy Rakan Zoe 
-+ Bard Fiora Gwen Lilia Rakan Shen Zoe 
-+ Bard Fiora Gwen Lilia Rakan Taric Zoe 
-+ Bard Fiora Gwen Milio Morgana Rumble Tristana 
-+ Bard Fiora Gwen Milio Morgana Smolder Tristana 
-+ Bard Fiora Gwen Milio Morgana Tristana Varus 
-+ Bard Fiora Gwen Milio Nasus Neeko Rakan 
-+ Bard Fiora Gwen Milio Neeko Rakan Shyvana 
-+ Bard Fiora Gwen Milio Neeko Rakan Swain 
-+ Bard Fiora Gwen Milio Nunu Poppy Rakan 
-+ Bard Fiora Gwen Milio Poppy Rakan Shen 
-+ Bard Fiora Gwen Milio Poppy Rakan Taric 
-+ Bard Fiora Gwen Olaf Twitch Zilean Zoe 
-+ Bard Fiora Gwen Rakan Rumble Tristana Zoe 
-+ Bard Fiora Gwen Rakan Smolder Tristana Zoe 
-+ Bard Fiora Gwen Rakan Tristana Varus Zoe 
-+ Bard Fiora Jinx Katarina KogMaw Milio Morgana 
-+ Bard Fiora Jinx Katarina KogMaw Rakan Zoe 
-+ Bard Fiora Jinx Katarina Milio Morgana Nomsy 
-+ Bard Fiora Jinx Katarina Milio Morgana Olaf 
-+ Bard Fiora Jinx Katarina Milio Morgana Twitch 
-+ Bard Fiora Jinx Katarina Nomsy Rakan Zoe 
-+ Bard Fiora Jinx Katarina Olaf Rakan Zoe 
-+ Bard Fiora Jinx Katarina Rakan Twitch Zoe 
-+ Bard Galio Hecarim Morgana Tahm Kench Taric Zoe 
-+ Bard Galio Mordekaiser Morgana Nora & Yuumi Soraka Zoe 
-+ Bard Galio Morgana Nora & Yuumi Rumble Soraka Zoe 
-+ Bard Galio Morgana Nora & Yuumi Soraka Tahm Kench Zoe 
-+ Bard Galio Morgana Nora & Yuumi Soraka Warwick Zoe 
-+ Bard Gwen Hecarim Katarina Lilia Morgana Zoe 
-+ Bard Gwen Hecarim Katarina Milio Morgana Poppy 
-+ Bard Gwen Hecarim Katarina Poppy Rakan Zoe 
-+ Bard Gwen Hwei Katarina Morgana Tristana Zoe 
-+ Bard Gwen Jayce Katarina Milio Morgana Neeko 
-+ Bard Gwen Jayce Katarina Neeko Rakan Zoe 
-+ Bard Gwen Karma Katarina Milio Syndra Zilean 
-+ Bard Gwen Karma Katarina Milio Ziggs Zilean 
-+ Bard Gwen Katarina Lilia Milio Morgana Poppy 
-+ Bard Gwen Katarina Lilia Morgana Nunu Zoe 
-+ Bard Gwen Katarina Lilia Morgana Poppy Ryze 
-+ Bard Gwen Katarina Lilia Morgana Poppy Zoe 
-+ Bard Gwen Katarina Lilia Morgana Shen Zoe 
-+ Bard Gwen Katarina Lilia Morgana Taric Zoe 
-+ Bard Gwen Katarina Lilia Poppy Rakan Zoe 
-+ Bard Gwen Katarina Lilia Poppy Zilean Zoe 
-+ Bard Gwen Katarina Milio Morgana Nasus Neeko 
-+ Bard Gwen Katarina Milio Morgana Neeko Shyvana 
-+ Bard Gwen Katarina Milio Morgana Neeko Swain 
-+ Bard Gwen Katarina Milio Morgana Nunu Poppy 
-+ Bard Gwen Katarina Milio Morgana Poppy Shen 
-+ Bard Gwen Katarina Milio Morgana Poppy Taric 
-+ Bard Gwen Katarina Milio Olaf Twitch Zilean 
-+ Bard Gwen Katarina Morgana Rumble Tristana Zoe 
-+ Bard Gwen Katarina Morgana Smolder Tristana Zoe 
-+ Bard Gwen Katarina Morgana Tristana Varus Zoe 
-+ Bard Gwen Katarina Nasus Neeko Rakan Zoe 
-+ Bard Gwen Katarina Neeko Rakan Shyvana Zoe 
-+ Bard Gwen Katarina Neeko Rakan Swain Zoe 
-+ Bard Gwen Katarina Nunu Poppy Rakan Zoe 
-+ Bard Gwen Katarina Poppy Rakan Shen Zoe 
-+ Bard Gwen Katarina Poppy Rakan Taric Zoe 
-+ Bard Gwen Lilia Milio Morgana Nilah Poppy 
-+ Bard Gwen Lilia Nilah Poppy Rakan Zoe 
-+ Bard Hwei Jinx Milio Nomsy Rakan Smolder 
-+ Bard Hwei Jinx Milio Olaf Tristana Zilean 
-+ Bard Hwei Jinx Milio Tristana Twitch Zilean 
-+ Bard Hwei Jinx Morgana Nomsy Smolder Zoe 
-+ Bard Jayce Jinx Milio Nomsy Rakan Shyvana 
-+ Bard Jayce Jinx Morgana Nomsy Shyvana Zoe 
-+ Bard Jayce Lilia Neeko Rakan Taric Zoe 
-+ Bard Jayce Morgana Nasus Shen Taric Zoe 
-+ Bard Jinx KogMaw Lilia Milio Morgana Poppy 
-+ Bard Jinx KogMaw Lilia Poppy Rakan Zoe 
-+ Bard Jinx Lilia Milio Morgana Nomsy Poppy 
-+ Bard Jinx Lilia Milio Morgana Olaf Poppy 
-+ Bard Jinx Lilia Milio Morgana Poppy Twitch 
-+ Bard Jinx Lilia Nomsy Poppy Rakan Zoe 
-+ Bard Jinx Lilia Olaf Poppy Rakan Zoe 
-+ Bard Jinx Lilia Poppy Rakan Twitch Zoe 
-+ Bard Jinx Milio Morgana Neeko Nomsy Shyvana 
-+ Bard Jinx Milio Morgana Nomsy Smolder Tristana 
-+ Bard Jinx Milio Nasus Nomsy Rakan Shyvana 
-+ Bard Jinx Milio Neeko Nomsy Rakan Shyvana 
-+ Bard Jinx Milio Nomsy Rakan Rumble Smolder 
-+ Bard Jinx Milio Nomsy Rakan Shyvana Swain 
-+ Bard Jinx Milio Nomsy Rakan Smolder Tristana 
-+ Bard Jinx Milio Nomsy Rakan Smolder Varus 
-+ Bard Jinx Milio Nomsy Smolder Tristana Zilean 
-+ Bard Jinx Morgana Nasus Nomsy Shyvana Zoe 
-+ Bard Jinx Morgana Neeko Nomsy Ryze Shyvana 
-+ Bard Jinx Morgana Neeko Nomsy Shyvana Zoe 
-+ Bard Jinx Morgana Nomsy Rumble Smolder Zoe 
-+ Bard Jinx Morgana Nomsy Shyvana Swain Zoe 
-+ Bard Jinx Morgana Nomsy Smolder Tristana Zoe 
-+ Bard Jinx Morgana Nomsy Smolder Varus Zoe 
-+ Bard Jinx Neeko Nomsy Rakan Shyvana Zoe 
-+ Bard Jinx Neeko Nomsy Shyvana Zilean Zoe 
-+ Bard Jinx Neeko Olaf Swain Zilean Zoe 
-+ Bard Jinx Neeko Swain Twitch Zilean Zoe 
-+ Bard Jinx Nomsy Rakan Ryze Smolder Tristana 
-+ Bard Jinx Nomsy Rakan Smolder Tristana Zoe 
-+ Bard Lilia Milio Morgana Nasus Neeko Shen 
-+ Bard Lilia Morgana Shen Tristana Varus Zoe 
-+ Bard Lilia Nasus Neeko Rakan Shen Zoe 
-+ Bard Milio Morgana Nasus Neeko Tristana Varus 
-+ Bard Milio Morgana Neeko Shyvana Smolder Tristana 
-+ Bard Milio Morgana Poppy Shen Tristana Varus 
-+ Bard Milio Nasus Neeko Poppy Rakan Shen 
-+ Bard Milio Nasus Rakan Shyvana Smolder Varus 
-+ Bard Morgana Nasus Shyvana Smolder Varus Zoe 
-+ Bard Nasus Neeko Rakan Tristana Varus Zoe 
-+ Bard Neeko Rakan Shyvana Smolder Tristana Zoe 
-+ Bard Poppy Rakan Shen Tristana Varus Zoe 
-+ Camille Hecarim Jax Lilia Rumble Tahm Kench Tristana 
-+ Camille Hecarim Jax Rumble Shen Tahm Kench Varus 
-+ Cassiopeia Hwei Karma Morgana Rumble Warwick Zilean 
-+ Ezreal Fiora Galio Katarina Milio Rumble Zoe 
-+ Ezreal Galio Lilia Milio Poppy Rumble Zoe 
-+ Ezreal Galio Milio Morgana Rakan Rumble Zoe 
-+ Ezreal Hecarim Poppy Rumble Ryze Tahm Kench Zoe 
-+ Fiora Galio Katarina Rumble Ryze Tristana Zoe 
-+ Fiora Hecarim Katarina Poppy Rumble Tahm Kench Tristana 
-+ Galio Jayce Milio Neeko Rumble Tristana Zoe 
-+ Galio Lilia Poppy Rumble Ryze Tristana Zoe 
-+ Galio Milio Poppy Rumble Taric Tristana Zoe 
-+ Galio Morgana Rakan Rumble Ryze Tristana Zoe 
-+ Galio Nasus Neeko Rumble Ryze Varus Zoe 
-+ Galio Neeko Rumble Ryze Shyvana Smolder Zoe 
-+ Galio Poppy Rumble Ryze Shen Varus Zoe 
-+ Hecarim Milio Poppy Rumble Tahm Kench Tristana Zoe 
-+ Hecarim Morgana Poppy Rakan Rumble Tahm Kench Tristana 
-+ Hecarim Nasus Neeko Poppy Rumble Tahm Kench Varus 
-+ Hecarim Nasus Rumble Shen Shyvana Smolder Tahm Kench 
-+ Hecarim Neeko Poppy Rumble Shyvana Smolder Tahm Kench
++ **Ahri Akali Ashe Bard Gwen Hecarim Shen**
++ **Ahri Akali Ashe Fiora Hecarim Shen Zoe**
++ **Ahri Akali Bard Camille Gwen Hecarim Shen**
++ **Ahri Akali Bard Camille Gwen Hecarim Zilean**
++ **Ahri Akali Bard Camille Hecarim Shen Zilean**
++ **Ahri Akali Bard Fiora Hecarim Morgana Shen**
++ **Ahri Akali Bard Gwen Hecarim Jax Shen**
++ **Ahri Akali Bard Gwen Hecarim Jax Zilean**
++ **Ahri Akali Bard Gwen Hecarim Kalista Shen**
++ **Ahri Akali Bard Gwen Hecarim Kassadin Shen**
++ **Ahri Akali Bard Gwen Hecarim Morgana Poppy**
++ **Ahri Akali Bard Gwen Hecarim Morgana Shen**
++ **Ahri Akali Bard Gwen Hecarim Rakan Shen**
++ **Ahri Akali Bard Gwen Hecarim Shen Zilean**
++ **Ahri Akali Bard Gwen Morgana Nasus Neeko**
++ **Ahri Akali Bard Gwen Morgana Poppy Shen**
++ **Ahri Akali Bard Gwen Rumble Tahm Kench Varus**
++ **Ahri Akali Bard Hecarim Jax Shen Zilean**
++ **Ahri Akali Camille Fiora Hecarim Shen Zoe**
++ **Ahri Akali Fiora Hecarim Jax Shen Zoe**
++ **Ahri Akali Fiora Hecarim Kalista Shen Zoe**
++ **Ahri Akali Fiora Hecarim Kassadin Shen Zoe**
++ **Ahri Akali Fiora Hecarim Kassadin Taric Zoe**
++ **Ahri Akali Fiora Rumble Tahm Kench Varus Zoe**
++ **Ahri Akali Hecarim Kalista Katarina Milio Shen**
++ **Ahri Bard Blitz Fiora Gwen Morgana Tahm Kench**
++ **Ahri Bard Camille Hecarim Jax Morgana Poppy**
++ **Ahri Bard Cassiopeia Fiora Gwen Karma Zilean**
++ **Ahri Bard Cassiopeia Hecarim Karma Poppy Zilean**
++ **Ahri Bard Diana Fiora Gwen Hecarim Morgana**
++ **Ahri Bard Diana Hecarim Jinx Olaf Zilean**
++ **Ahri Bard Diana Hecarim Jinx Twitch Zilean**
++ **Ahri Bard Fiora Galio Gwen Morgana Tahm Kench**
++ **Ahri Bard Fiora Gwen Hecarim Lilia Morgana**
++ **Ahri Bard Fiora Gwen Hecarim Morgana Nunu**
++ **Ahri Bard Fiora Gwen Hecarim Morgana Poppy**
++ **Ahri Bard Fiora Gwen Hecarim Morgana Shen**
++ **Ahri Bard Fiora Gwen Hecarim Morgana Taric**
++ **Ahri Bard Fiora Gwen Hecarim Poppy Rakan**
++ **Ahri Bard Fiora Gwen Hecarim Poppy Zilean**
++ **Ahri Bard Fiora Gwen Mordekaiser Morgana Tahm Kench**
++ **Ahri Bard Fiora Gwen Morgana Rumble Tahm Kench**
++ **Ahri Bard Fiora Gwen Morgana Tahm Kench Warwick**
++ **Ahri Bard Galio Soraka Tahm Kench Vex Zilean**
++ **Ahri Bard Gwen Hecarim Katarina Lilia Rakan**
++ **Ahri Bard Gwen Hecarim Katarina Morgana Poppy**
++ **Ahri Bard Gwen Hecarim Morgana Nilah Poppy**
++ **Ahri Bard Hecarim Jinx KogMaw Morgana Poppy**
++ **Ahri Bard Hecarim Jinx Morgana Nomsy Poppy**
++ **Ahri Bard Hecarim Jinx Morgana Olaf Poppy**
++ **Ahri Bard Hecarim Jinx Morgana Poppy Twitch**
++ **Ahri Bard Hecarim Morgana Nasus Neeko Shen**
++ **Ahri Bard Jinx Morgana Neeko Nomsy Shyvana**
++ **Ahri Bard Jinx Nomsy Rumble Smolder Tahm Kench**
++ **Ahri Bard Jinx Olaf Tahm Kench Warwick Zilean**
++ **Ahri Bard Jinx Tahm Kench Twitch Warwick Zilean**
++ **Ahri Ezreal Galio Hecarim Poppy Rumble Zoe**
++ **Ahri Ezreal Jayce Neeko Rumble Tahm Kench Zoe**
++ **Ahri Ezreal Poppy Rumble Tahm Kench Taric Zoe**
++ **Ahri Nasus Neeko Rumble Tahm Kench Varus Zoe**
++ **Ahri Neeko Rumble Shyvana Smolder Tahm Kench Zoe**
++ **Ahri Poppy Rumble Shen Tahm Kench Varus Zoe**
++ **Akali Ashe Hecarim Mordekaiser Nilah Shen Tahm Kench**
++ **Akali Bard Briar Gwen Morgana Nasus Zoe**
++ **Akali Bard Camille Gwen Hecarim Shen Zilean**
++ **Akali Bard Camille Gwen Jax Morgana Zoe**
++ **Akali Bard Cassiopeia Gwen Karma Zilean Zoe**
++ **Akali Bard Diana Gwen Morgana Shen Zoe**
++ **Akali Bard Elise Gwen Morgana Nasus Zoe**
++ **Akali Bard Ezreal Gwen Morgana Varus Zoe**
++ **Akali Bard Gwen Hecarim Jax Shen Zilean**
++ **Akali Bard Gwen Hecarim Morgana Shen Zoe**
++ **Akali Bard Gwen Hwei Morgana Varus Zoe**
++ **Akali Bard Gwen Jayce Morgana Nasus Zoe**
++ **Akali Bard Gwen Lilia Milio Rakan Shen**
++ **Akali Bard Gwen Lilia Morgana Shen Zoe**
++ **Akali Bard Gwen Milio Morgana Nasus Neeko**
++ **Akali Bard Gwen Milio Morgana Poppy Shen**
++ **Akali Bard Gwen Milio Rakan Tristana Varus**
++ **Akali Bard Gwen Morgana Nasus Neeko Ryze**
++ **Akali Bard Gwen Morgana Nasus Neeko Zoe**
++ **Akali Bard Gwen Morgana Nasus Shyvana Zoe**
++ **Akali Bard Gwen Morgana Nasus Swain Zoe**
++ **Akali Bard Gwen Morgana Nunu Shen Zoe**
++ **Akali Bard Gwen Morgana Poppy Ryze Shen**
++ **Akali Bard Gwen Morgana Poppy Shen Zoe**
++ **Akali Bard Gwen Morgana Rumble Varus Zoe**
++ **Akali Bard Gwen Morgana Shen Taric Zoe**
++ **Akali Bard Gwen Morgana Smolder Varus Zoe**
++ **Akali Bard Gwen Morgana Tristana Varus Zoe**
++ **Akali Bard Gwen Nasus Neeko Rakan Zoe**
++ **Akali Bard Gwen Nasus Neeko Zilean Zoe**
++ **Akali Bard Gwen Poppy Rakan Shen Zoe**
++ **Akali Bard Gwen Poppy Shen Zilean Zoe**
++ **Akali Camille Cassiopeia Fiora Hecarim Karma Shen**
++ **Akali Camille Fiora Hecarim Morgana Shen Zilean**
++ **Akali Cassiopeia Fiora Hecarim Jax Karma Shen**
++ **Akali Fiora Galio Rumble Ryze Varus Zoe**
++ **Akali Fiora Hecarim Jax Morgana Shen Zilean**
++ **Akali Fiora Hecarim Kassadin Ryze Shen Zoe**
++ **Akali Fiora Hecarim Poppy Rumble Tahm Kench Varus**
++ **Bard Blitz Galio Morgana Nora & Yuumi Soraka Zoe**
++ **Bard Briar Elise Gwen Morgana Nilah Zoe**
++ **Bard Briar Jinx Morgana Nomsy Shyvana Zoe**
++ **Bard Cassiopeia Fiora Gwen Karma Milio Zilean**
++ **Bard Cassiopeia Fiora Gwen Karma Ryze Zilean**
++ **Bard Cassiopeia Fiora Gwen Karma Zilean Zoe**
++ **Bard Cassiopeia Gwen Karma Katarina Zilean Zoe**
++ **Bard Cassiopeia Gwen Karma Nilah Zilean Zoe**
++ **Bard Cassiopeia Jinx Karma KogMaw Zilean Zoe**
++ **Bard Cassiopeia Jinx Karma Nomsy Zilean Zoe**
++ **Bard Cassiopeia Jinx Karma Olaf Zilean Zoe**
++ **Bard Cassiopeia Jinx Karma Twitch Zilean Zoe**
++ **Bard Cassiopeia Karma Olaf Twitch Zilean Zoe**
++ **Bard Diana Jinx Olaf Poppy Zilean Zoe**
++ **Bard Diana Jinx Poppy Twitch Zilean Zoe**
++ **Bard Elise Jinx Morgana Nomsy Shyvana Zoe**
++ **Bard Ezreal Fiora Galio Gwen Rumble Zoe**
++ **Bard Ezreal Galio Gwen Morgana Rumble Zoe**
++ **Bard Ezreal Galio Jinx Morgana Rumble Zoe**
++ **Bard Ezreal Galio Morgana Rumble Soraka Zoe**
++ **Bard Ezreal Jayce Morgana Nasus Varus Zoe**
++ **Bard Ezreal Jayce Morgana Shyvana Smolder Zoe**
++ **Bard Ezreal Jinx Morgana Nomsy Smolder Zoe**
++ **Bard Ezreal Morgana Shen Taric Varus Zoe**
++ **Bard Fiora Gwen Karma Syndra Zilean Zoe**
++ **Bard Fiora Gwen Karma Ziggs Zilean Zoe**
++ **Bard Fiora Gwen Lilia Milio Poppy Rakan**
++ **Bard Fiora Gwen Olaf Twitch Zilean Zoe**
++ **Bard Galio Hecarim Morgana Tahm Kench Taric Zoe**
++ **Bard Galio Mordekaiser Morgana Nora & Yuumi Soraka Zoe**
++ **Bard Galio Morgana Nora & Yuumi Rumble Soraka Zoe**
++ **Bard Galio Morgana Nora & Yuumi Soraka Tahm Kench Zoe**
++ **Bard Galio Morgana Nora & Yuumi Soraka Warwick Zoe**
++ **Bard Gwen Katarina Lilia Milio Morgana Poppy**
++ **Bard Gwen Katarina Lilia Poppy Rakan Zoe**
++ **Bard Hwei Jinx Morgana Nomsy Smolder Zoe**
++ **Bard Jayce Jinx Morgana Nomsy Shyvana Zoe**
++ **Bard Jayce Morgana Nasus Shen Taric Zoe**
++ **Bard Jinx Milio Morgana Neeko Nomsy Shyvana**
++ **Bard Jinx Milio Nomsy Rakan Smolder Tristana**
++ **Bard Jinx Morgana Nasus Nomsy Shyvana Zoe**
++ **Bard Jinx Morgana Neeko Nomsy Ryze Shyvana**
++ **Bard Jinx Morgana Neeko Nomsy Shyvana Zoe**
++ **Bard Jinx Morgana Nomsy Rumble Smolder Zoe**
++ **Bard Jinx Morgana Nomsy Shyvana Swain Zoe**
++ **Bard Jinx Morgana Nomsy Smolder Tristana Zoe**
++ **Bard Jinx Morgana Nomsy Smolder Varus Zoe**
++ **Bard Jinx Neeko Nomsy Rakan Shyvana Zoe**
++ **Bard Jinx Neeko Nomsy Shyvana Zilean Zoe**
++ **Bard Jinx Neeko Olaf Swain Zilean Zoe**
++ **Bard Jinx Neeko Swain Twitch Zilean Zoe**
++ **Bard Morgana Nasus Shyvana Smolder Varus Zoe**
++ **Camille Hecarim Jax Rumble Shen Tahm Kench Varus**
++ **Cassiopeia Hwei Karma Morgana Rumble Warwick Zilean**
++ **Ezreal Hecarim Poppy Rumble Ryze Tahm Kench Zoe**
++ **Galio Nasus Neeko Rumble Ryze Varus Zoe**
++ **Galio Neeko Rumble Ryze Shyvana Smolder Zoe**
++ **Galio Poppy Rumble Ryze Shen Varus Zoe**
++ **Hecarim Nasus Neeko Poppy Rumble Tahm Kench Varus**
++ **Hecarim Nasus Rumble Shen Shyvana Smolder Tahm Kench**
++ **Hecarim Neeko Poppy Rumble Shyvana Smolder Tahm Kench**
