--- a/8.md
+++ b/8.md
@@ -1,3 +1,2 @@
-+ Ahri Akali Bard Camille Gwen Hecarim Shen Zilean 
-+ Ahri Akali Bard Gwen Hecarim Jax Shen Zilean 
-+ Ahri Akali Bard Gwen Hecarim Kalista Rakan Shen
++ **Ahri Akali Bard Camille Gwen Hecarim Shen Zilean**
++ **Ahri Akali Bard Gwen Hecarim Jax Shen Zilean**
